--- a/src/components/shortcuts-legend/ShortcutsLegend.module.css
+++ b/src/components/shortcuts-legend/ShortcutsLegend.module.css
@@ -1,4 +1,6 @@
 .legend {
+  grid-row: 5;
+
   color: #fff;
 
   position: fixed;
@@ -24,7 +26,7 @@
 
 .legend:focus,
 .legend:hover {
-  height: 24em;
+  height: 28em;
 
   outline: none;
 }
