--- a/src/components/wire-list/WireList.module.css
+++ b/src/components/wire-list/WireList.module.css
@@ -1,5 +1,7 @@
 .wireList {
   justify-self: end;
+
+  overflow: auto;
 }
 
 .wireListLayout {
